finished path finding

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
         <div class="split-horizontal bottom placeholder" style="--ratio:50%;background-color=blue">
         </div>
     </div>
+    <script src="/pkg/index.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
