--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <tbody>
                 <tr>
                     <th style="white-space: nowrap;"> departure station </th>
-                    <th style="width:100%"><span style="color: red;">●</span> <input id="departure-station" type="text" autocomplete="off"></th>
+                    <th style="width:100%"><span style="color: green;">●</span> <input id="departure-station" type="text" autocomplete="off"></th>
                 </tr>
                 <tr>
                     <th style="white-space: nowrap;">arrival station </th>
-                    <th style="width:100%"><span style="color: green;">●</span> <input id="arrival-station" type="text" autocomplete="off"></th>
+                    <th style="width:100%"><span style="color: red;">●</span> <input id="arrival-station" type="text" autocomplete="off"></th>
                 </tr>
             </tbody>
         </table>
