--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Rust + Webpack project!</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/css/autoComplete.min.css">
+    <title>InfoVis</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body onkeyup="fullscreen(this, event)">
